Add base ci workflow

--- a/server/cmd/warrant/Makefile
+++ b/server/cmd/warrant/Makefile
@@ -1,5 +1,6 @@
 NAME    = warrant
 BUILD_PATH = bin/$(NAME)
+GOENV   = GOARCH=amd64 GOOS=linux CGO_ENABLED=0
 GOCMD   = go
 GOBUILD = $(GOCMD) build -o
 VERSION = $(shell cat VERSION)
@@ -12,3 +13,8 @@ clean:
 dev: clean
 	$(GOCMD) get
 	$(GOBUILD) $(BUILD_PATH) main.go
+
+.PHONY: build
+build: clean
+	$(GOCMD) get
+	$(GOENV) $(GOBUILD) $(BUILD_PATH) -ldflags="-s -w" main.go
