Add build tag for sqlite + stubbed sqlite db

--- a/cmd/warrant/Makefile
+++ b/cmd/warrant/Makefile
@@ -1,9 +1,8 @@
-NAME    = warrant
+NAME       = warrant
 BUILD_PATH = bin/$(NAME)
-GOENV   = GOARCH=amd64 GOOS=linux CGO_ENABLED=0
-GOCMD   = go
-GOBUILD = $(GOCMD) build -o
-VERSION = $(shell cat VERSION)
+GOENV      = GOARCH=amd64 GOOS=linux CGO_ENABLED=0
+GOCMD      = go
+GOBUILD    = $(GOCMD) build -v -o $(BUILD_PATH)
 
 .PHONY: clean
 clean:
@@ -12,9 +11,9 @@ clean:
 .PHONY: dev
 dev: clean
 	$(GOCMD) get
-	$(GOBUILD) $(BUILD_PATH) main.go
+	$(GOBUILD) -tags="sqlite" main.go
 
 .PHONY: build
 build: clean
 	$(GOCMD) get
-	$(GOENV) $(GOBUILD) $(BUILD_PATH) -ldflags="-s -w" main.go
+	$(GOENV) $(GOBUILD) -ldflags="-s -w" main.go
