--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,10 +55,10 @@ jobs:
           sleep 5
           apirunner tests/ tests/ci-apirunner.conf
       - name: Shutdown test server
-        needs: start-server
+        if: success() || (failure() && steps.start-server.outcome == 'success')
         run: kill -9 `lsof -i:8000 -t`
       - name: Archive server log
-        needs: start-server
+        if: failure() && steps.start-server.outcome == 'success'
         uses: actions/upload-artifact@v3
         with:
           name: server-log
