--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup go env
+      - name: Setup Go env
         uses: actions/setup-go@v3
         with:
           go-version: "^1.19.3"
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Release with goreleaser
+      - name: Release with Goreleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           distribution: goreleaser
