--- a/.github/workflows/sqlite.yaml
+++ b/.github/workflows/sqlite.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: SQLite
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup go env
+      - name: Setup Go env
         uses: actions/setup-go@v3
         with:
           go-version: "^1.19.3"
@@ -17,24 +17,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 2
-      - name: Verify go dependencies
-        run: go mod verify
-      - name: Go staticcheck
-        uses: dominikh/staticcheck-action@v1.3.0
-        with:
-          version: "2023.1.2"
-          install-go: false
-      - name: Goreleaser check
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          distribution: goreleaser
-          version: latest
-          args: check
       - name: Build binary
         run: make dev
         working-directory: cmd/warrant
       - name: Install apirunner
-        run: go install github.com/warrant-dev/apirunner/cmd/apirunner@v1.3.0
+        run: go install github.com/warrant-dev/apirunner/cmd/apirunner@latest
       - name: Start test server
         id: start-server
         run: ./cmd/warrant/bin/warrant > server.log 2>&1 &
@@ -55,7 +42,7 @@ jobs:
           WARRANT_EVENTSTORE_SYNCHRONIZEEVENTS: true
       - name: Run apirunner tests
         run: |
-          sleep 5
+          sleep 3
           apirunner tests/ tests/ci-apirunner.conf
       - name: Shutdown test server
         if: success() || (failure() && steps.start-server.outcome == 'success')
