Add missing env vars + fix errors.Wrapf call

--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -43,8 +43,14 @@ jobs:
           WARRANT_ENABLEACCESSLOG: true
           WARRANT_APIKEY: warrant_api_key
           WARRANT_DATASTORE: mysql
+          WARRANT_DATASTORE_MYSQL_USERNAME: root
+          WARRANT_DATASTORE_MYSQL_PASSWORD: root
+          WARRANT_DATASTORE_MYSQL_HOSTNAME: 127.0.0.1
           WARRANT_DATASTORE_MYSQL_DATABASE: warrant
           WARRANT_EVENTSTORE: mysql
+          WARRANT_EVENTSTORE_MYSQL_USERNAME: root
+          WARRANT_EVENTSTORE_MYSQL_PASSWORD: root
+          WARRANT_EVENTSTORE_MYSQL_HOSTNAME: 127.0.0.1
           WARRANT_EVENTSTORE_MYSQL_DATABASE: warrantEvents
           WARRANT_EVENTSTORE_SYNCHRONIZEEVENTS: true
       - name: Run apirunner tests
