--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -3,8 +3,12 @@ name: "Go Lint/Test/Checks"
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - '**.md'
   pull_request:
     branches: [main]
+    paths-ignore:
+      - '**.md'
 jobs:
   ci:
     runs-on: ubuntu-latest
