--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -29,9 +29,9 @@ jobs:
         run: |
           go install github.com/warrant-dev/apirunner/cmd/apirunner@latest
           go install -tags 'mysql' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
-      - name: Run datastore migrations
+      - name: Run datastore migrations 'up'
         run: migrate -path ./migrations/datastore/mysql/ -database mysql://root:root@/warrant up
-      - name: Run eventstore migrations
+      - name: Run eventstore migrations 'up'
         run: migrate -path ./migrations/eventstore/mysql/ -database mysql://root:root@/warrantEvents up
       - name: Start test server
         id: start-server
@@ -60,6 +60,10 @@ jobs:
       - name: Shutdown test server
         if: success() || (failure() && steps.start-server.outcome == 'success')
         run: kill -9 `lsof -i:8000 -t`
+      - name: Run datastore migrations 'down'
+        run: echo 'y' | migrate -path ./migrations/datastore/mysql/ -database mysql://root:root@/warrant down
+      - name: Run eventstore migrations 'down'
+        run: echo 'y' | migrate -path ./migrations/eventstore/mysql/ -database mysql://root:root@/warrantEvents down
       - name: Archive server log
         if: failure()
         uses: actions/upload-artifact@v3
