--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,10 +1,13 @@
-name: "Go Build/Test/Checks"
+name: "Go Build/Test/Check/Lint"
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+permissions:
+  contents: read
+  pull-requests: read
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -13,6 +16,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "^1.20.4"
+          cache: false
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -27,3 +31,10 @@ jobs:
           distribution: goreleaser
           version: latest
           args: check
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+          args: -v --timeout=5m
+          only-new-issues: true
+          install-mode: "binary"
