--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "^1.20.4"
-          cache: false
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -31,6 +30,18 @@ jobs:
           distribution: goreleaser
           version: latest
           args: check
+  golangci:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Go env
+        uses: actions/setup-go@v4
+        with:
+          go-version: "^1.20.4"
+          cache: false
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 23
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
