--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -40,10 +40,12 @@ jobs:
           cache: false
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           args: -v --timeout=5m
-          only-new-issues: true
+          only-new-issues: false
           install-mode: "binary"
