--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -34,9 +34,9 @@ linters:
     # - gocyclo
     # - godot
     - godox
-    # - goerr113
+    - goerr113
     - gofumpt
-    # - gomnd
+    - gomnd
     # - gosec
     # - interfacebloat
     # - ireturn
@@ -78,6 +78,8 @@ linters-settings:
     line-length: 270
   nestif:
     min-complexity: 7
+  cyclop:
+    max-complexity: 20
 issues:
   new-from-rev: 3f04848d5a946826ab51f00361d6793761ca6616
   max-issues-per-linter: 0
