--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -46,16 +46,28 @@ jobs:
           WARRANT_LOGLEVEL: 0
           WARRANT_ENABLEACCESSLOG: true
           WARRANT_AUTHENTICATION_APIKEY: warrant_api_key
+          WARRANT_ENABLEWARRANTTOKENS: false
+          WARRANT_CHECK_CONCURRENCY: 4
+          WARRANT_CHECK_MAXCONCURRENCY: 1000
+          WARRANT_CHECK_TIMEOUT: 1m
           WARRANT_DATASTORE: mysql
           WARRANT_DATASTORE_MYSQL_USERNAME: root
           WARRANT_DATASTORE_MYSQL_PASSWORD: root
           WARRANT_DATASTORE_MYSQL_HOSTNAME: 127.0.0.1
           WARRANT_DATASTORE_MYSQL_DATABASE: warrant
+          WARRANT_DATASTORE_MYSQL_MAXIDLECONNECTIONS: 5
+          WARRANT_DATASTORE_MYSQL_CONNMAXIDLETIME: 4h
+          WARRANT_DATASTORE_MYSQL_MAXOPENCONNECTIONS: 5
+          WARRANT_DATASTORE_MYSQL_CONNMAXLIFETIME: 6h
           WARRANT_EVENTSTORE: mysql
           WARRANT_EVENTSTORE_MYSQL_USERNAME: root
           WARRANT_EVENTSTORE_MYSQL_PASSWORD: root
           WARRANT_EVENTSTORE_MYSQL_HOSTNAME: 127.0.0.1
           WARRANT_EVENTSTORE_MYSQL_DATABASE: warrantEvents
+          WARRANT_EVENTSTORE_MYSQL_MAXIDLECONNECTIONS: 5
+          WARRANT_EVENTSTORE_MYSQL_CONNMAXIDLETIME: 4h
+          WARRANT_EVENTSTORE_MYSQL_MAXOPENCONNECTIONS: 5
+          WARRANT_EVENTSTORE_MYSQL_CONNMAXLIFETIME: 6h
           WARRANT_EVENTSTORE_SYNCHRONIZEEVENTS: true
       - name: Run apirunner tests
         run: |
