--- a/.github/workflows/postgres.yaml
+++ b/.github/workflows/postgres.yaml
@@ -51,18 +51,30 @@ jobs:
           WARRANT_LOGLEVEL: 0
           WARRANT_ENABLEACCESSLOG: true
           WARRANT_AUTHENTICATION_APIKEY: warrant_api_key
+          WARRANT_ENABLEWARRANTTOKENS: false
+          WARRANT_CHECK_CONCURRENCY: 4
+          WARRANT_CHECK_MAXCONCURRENCY: 1000
+          WARRANT_CHECK_TIMEOUT: 1m
           WARRANT_DATASTORE: postgres
           WARRANT_DATASTORE_POSTGRES_USERNAME: warrant_user
           WARRANT_DATASTORE_POSTGRES_PASSWORD: db_password
           WARRANT_DATASTORE_POSTGRES_HOSTNAME: localhost
           WARRANT_DATASTORE_POSTGRES_DATABASE: warrant
           WARRANT_DATASTORE_POSTGRES_SSLMODE: disable
+          WARRANT_DATASTORE_POSTGRES_MAXIDLECONNECTIONS: 5
+          WARRANT_DATASTORE_POSTGRES_CONNMAXIDLETIME: 4h
+          WARRANT_DATASTORE_POSTGRES_MAXOPENCONNECTIONS: 5
+          WARRANT_DATASTORE_POSTGRES_CONNMAXLIFETIME: 6h
           WARRANT_EVENTSTORE: postgres
           WARRANT_EVENTSTORE_POSTGRES_USERNAME: warrant_user
           WARRANT_EVENTSTORE_POSTGRES_PASSWORD: db_password
           WARRANT_EVENTSTORE_POSTGRES_HOSTNAME: localhost
           WARRANT_EVENTSTORE_POSTGRES_DATABASE: warrant_events
           WARRANT_EVENTSTORE_POSTGRES_SSLMODE: disable
+          WARRANT_EVENTSTORE_POSTGRES_MAXIDLECONNECTIONS: 5
+          WARRANT_EVENTSTORE_POSTGRES_CONNMAXIDLETIME: 4h
+          WARRANT_EVENTSTORE_POSTGRES_MAXOPENCONNECTIONS: 5
+          WARRANT_EVENTSTORE_POSTGRES_CONNMAXLIFETIME: 6h
           WARRANT_EVENTSTORE_SYNCHRONIZEEVENTS: true
       - name: Run apirunner tests
         run: |
