--- a/.github/workflows/sqlite.yaml
+++ b/.github/workflows/sqlite.yaml
@@ -35,14 +35,26 @@ jobs:
           WARRANT_LOGLEVEL: 0
           WARRANT_ENABLEACCESSLOG: true
           WARRANT_AUTHENTICATION_APIKEY: warrant_api_key
+          WARRANT_ENABLEWARRANTTOKENS: false
+          WARRANT_CHECK_CONCURRENCY: 4
+          WARRANT_CHECK_MAXCONCURRENCY: 1000
+          WARRANT_CHECK_TIMEOUT: 1m
           WARRANT_DATASTORE: sqlite
           WARRANT_DATASTORE_SQLITE_DATABASE: warrant
           WARRANT_DATASTORE_SQLITE_INMEMORY: true
           WARRANT_DATASTORE_SQLITE_MIGRATIONSOURCE: file://./migrations/datastore/sqlite
+          WARRANT_DATASTORE_SQLITE_MAXIDLECONNECTIONS: 1
+          WARRANT_DATASTORE_SQLITE_CONNMAXIDLETIME: 4h
+          WARRANT_DATASTORE_SQLITE_MAXOPENCONNECTIONS: 1
+          WARRANT_DATASTORE_SQLITE_CONNMAXLIFETIME: 6h
           WARRANT_EVENTSTORE: sqlite
           WARRANT_EVENTSTORE_SQLITE_DATABASE: warrantEvents
           WARRANT_EVENTSTORE_SQLITE_INMEMORY: true
           WARRANT_EVENTSTORE_SQLITE_MIGRATIONSOURCE: file://./migrations/eventstore/sqlite
+          WARRANT_EVENTSTORE_SQLITE_MAXIDLECONNECTIONS: 5
+          WARRANT_EVENTSTORE_SQLITE_CONNMAXIDLETIME: 4h
+          WARRANT_EVENTSTORE_SQLITE_MAXOPENCONNECTIONS: 5
+          WARRANT_EVENTSTORE_SQLITE_CONNMAXLIFETIME: 6h
           WARRANT_EVENTSTORE_SYNCHRONIZEEVENTS: true
       - name: Run apirunner tests
         run: |
