--- a/.github/workflows/postgres.yaml
+++ b/.github/workflows/postgres.yaml
@@ -51,7 +51,6 @@ jobs:
           WARRANT_LOGLEVEL: 0
           WARRANT_ENABLEACCESSLOG: true
           WARRANT_AUTHENTICATION_APIKEY: warrant_api_key
-          WARRANT_ENABLEWARRANTTOKENS: false
           WARRANT_CHECK_CONCURRENCY: 4
           WARRANT_CHECK_MAXCONCURRENCY: 1000
           WARRANT_CHECK_TIMEOUT: 1m
@@ -62,9 +61,12 @@ jobs:
           WARRANT_DATASTORE_POSTGRES_DATABASE: warrant
           WARRANT_DATASTORE_POSTGRES_SSLMODE: disable
           WARRANT_DATASTORE_POSTGRES_MAXIDLECONNECTIONS: 5
-          WARRANT_DATASTORE_POSTGRES_CONNMAXIDLETIME: 4h
           WARRANT_DATASTORE_POSTGRES_MAXOPENCONNECTIONS: 5
+          WARRANT_DATASTORE_POSTGRES_CONNMAXIDLETIME: 4h
           WARRANT_DATASTORE_POSTGRES_CONNMAXLIFETIME: 6h
+          WARRANT_DATASTORE_POSTGRES_READERHOSTNAME: localhost
+          WARRANT_DATASTORE_POSTGRES_READERMAXIDLECONNECTIONS: 5
+          WARRANT_DATASTORE_POSTGRES_READERMAXOPENCONNECTIONS: 5
           WARRANT_EVENTSTORE: postgres
           WARRANT_EVENTSTORE_POSTGRES_USERNAME: warrant_user
           WARRANT_EVENTSTORE_POSTGRES_PASSWORD: db_password
@@ -72,9 +74,12 @@ jobs:
           WARRANT_EVENTSTORE_POSTGRES_DATABASE: warrant_events
           WARRANT_EVENTSTORE_POSTGRES_SSLMODE: disable
           WARRANT_EVENTSTORE_POSTGRES_MAXIDLECONNECTIONS: 5
-          WARRANT_EVENTSTORE_POSTGRES_CONNMAXIDLETIME: 4h
           WARRANT_EVENTSTORE_POSTGRES_MAXOPENCONNECTIONS: 5
+          WARRANT_EVENTSTORE_POSTGRES_CONNMAXIDLETIME: 4h
           WARRANT_EVENTSTORE_POSTGRES_CONNMAXLIFETIME: 6h
+          WARRANT_EVENTSTORE_POSTGRES_READERHOSTNAME: localhost
+          WARRANT_EVENTSTORE_POSTGRES_READERMAXIDLECONNECTIONS: 5
+          WARRANT_EVENTSTORE_POSTGRES_READERMAXOPENCONNECTIONS: 5
           WARRANT_EVENTSTORE_SYNCHRONIZEEVENTS: true
       - name: Run apirunner tests
         run: |
