--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,9 @@
-name: ci
+name: docker_build
 
 on:
   push:
-    branches:
-      - "main"
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 env:
   REGISTRY_IMAGE: ${{ secrets.DOCKER_IMAGE_USERNAME }}
@@ -16,9 +16,6 @@ jobs:
       matrix:
         platform:
           - linux/amd64
-          - darwin/amd64
-          - darwin/arm64
-          - linux/arm64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
