--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -63,7 +63,7 @@ linters:
 linters-settings:
   goheader:
     template: |-
-      Copyright {{YEAR-RANGE}} Forerunner Labs, Inc.
+      Copyright 2023 Forerunner Labs, Inc.
 
       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
