Update mysql and postgres GH workflows to use DSNs

--- a/.github/workflows/postgres.yaml
+++ b/.github/workflows/postgres.yaml
@@ -52,16 +52,12 @@ jobs:
           WARRANT_CHECK_MAXCONCURRENCY: 1000
           WARRANT_CHECK_TIMEOUT: 1m
           WARRANT_DATASTORE: postgres
-          WARRANT_DATASTORE_POSTGRES_USERNAME: warrant_user
-          WARRANT_DATASTORE_POSTGRES_PASSWORD: db_password
-          WARRANT_DATASTORE_POSTGRES_HOSTNAME: localhost
-          WARRANT_DATASTORE_POSTGRES_DATABASE: warrant
-          WARRANT_DATASTORE_POSTGRES_SSLMODE: disable
+          WARRANT_DATASTORE_POSTGRES_DSN: postgresql://warrant_user:db_password@localhost:5432/warrant?sslmode=disable
           WARRANT_DATASTORE_POSTGRES_MAXIDLECONNECTIONS: 5
           WARRANT_DATASTORE_POSTGRES_MAXOPENCONNECTIONS: 5
           WARRANT_DATASTORE_POSTGRES_CONNMAXIDLETIME: 4h
           WARRANT_DATASTORE_POSTGRES_CONNMAXLIFETIME: 6h
-          WARRANT_DATASTORE_POSTGRES_READERHOSTNAME: localhost
+          WARRANT_DATASTORE_POSTGRES_READERDSN: postgresql://warrant_user:db_password@localhost:5432/warrant?sslmode=disable
           WARRANT_DATASTORE_POSTGRES_READERMAXIDLECONNECTIONS: 5
           WARRANT_DATASTORE_POSTGRES_READERMAXOPENCONNECTIONS: 5
       - name: Run apirunner tests
