--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -47,15 +47,12 @@ jobs:
           WARRANT_CHECK_MAXCONCURRENCY: 1000
           WARRANT_CHECK_TIMEOUT: 1m
           WARRANT_DATASTORE: mysql
-          WARRANT_DATASTORE_MYSQL_USERNAME: root
-          WARRANT_DATASTORE_MYSQL_PASSWORD: root
-          WARRANT_DATASTORE_MYSQL_HOSTNAME: 127.0.0.1
-          WARRANT_DATASTORE_MYSQL_DATABASE: warrant
+          WARRANT_DATASTORE_MYSQL_DSN: root:root@tcp(127.0.0.1:3306)/warrant?parseTime=true
           WARRANT_DATASTORE_MYSQL_MAXIDLECONNECTIONS: 5
           WARRANT_DATASTORE_MYSQL_MAXOPENCONNECTIONS: 5
           WARRANT_DATASTORE_MYSQL_CONNMAXIDLETIME: 4h
           WARRANT_DATASTORE_MYSQL_CONNMAXLIFETIME: 6h
-          WARRANT_DATASTORE_MYSQL_READERHOSTNAME: 127.0.0.1
+          WARRANT_DATASTORE_MYSQL_READERDSN: root:root@tcp(127.0.0.1:3306)/warrant?parseTime=true
           WARRANT_DATASTORE_MYSQL_READERMAXIDLECONNECTIONS: 5
           WARRANT_DATASTORE_MYSQL_READERMAXOPENCONNECTIONS: 5
       - name: Run apirunner tests
